# RustOS

./: Cargo.toml  README.md  x86_64-rust_os.json
.cargo/: config.toml
.github/workflows/: jekyll-gh-pages.yml
src/: lib.rs  main.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs  should_panic.rs
